# TheGameOfLife

./: CMakeLists.txt  CellGrid.cpp  CellGrid.h  CellSimulation.cpp  CellSimulation.h  GameOfLife.cpp  GameOfLife.h  MapFileReader.cpp  MapFileReader.h  MirroredCellGrid.cpp  MirroredCellGrid.h  TorusCellGrid.cpp  TorusCellGrid.h  main.cpp
